fixed responsive collapsing div on ipad pro

--- a/client/style.css
+++ b/client/style.css
@@ -120,6 +120,6 @@ display: none;
   }
 
   .departments{
-  height: 45vh;
+  height: 250px;
 }
 }
